--- a/index.html
+++ b/index.html
@@ -70,6 +70,26 @@
     </div>
     <!-- image carousel end -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+<!-- Footer -->
+
+
+<div class="footer">
+    <div class="row">
+        <p class="col-sm-8">2021 &copy; All Rights Reserved | Designed by NayaNayan</p>
+        
+        <span class="col-sm-4">
+            <a href="https://twitter.com/NayaNayan2?s=09"><i class="fa fa-twitter"></i></a>
+            <a href=""><i class="fa fa-facebook"></i></a>
+            <a href="https://instagram.com/thenayanayan?igshid=45l3sl3pzqyp"><i class="fa fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/company/naya-nayan"><i class="fa fa-linkedin"></i></a>
+        </span>
+    </div>
+
+</div>
+
+
+
+  <!-- Footer ending -->
 </body>
 
 </html>
