--- a/index.html
+++ b/index.html
@@ -70,10 +70,53 @@
     </div>
     <!-- image carousel end -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-<!-- Footer -->
+
+
+    <!-- Footer -->
+
 
 
 <div class="footer">
+    <div class="row">
+
+        <div class=" about-us col-sm-4" >
+        <h2>About Us</h2>
+
+        <p>
+            Smart Eye is a leading provider of information technology, consulting, and business process services. Our dedicated 
+            employees offer strategic insights, technological expertise and industry experience.
+
+        We focus on technologies that promise to reduce costs, streamline processes and speed time-to-market, Backed by our strong quality 
+processes and rich experience managing global...
+        </p>
+        </div>
+
+        <div class="col-sm-4">
+            <h2>Useful Links</h2>
+        </div>
+
+        <div class="col-sm-4">
+            <h2>Contact Us</h2>
+            BlueDart</br>
+            Marthandam (K.K District)</br>
+            Tamil Nadu, IND</br>
+            Phone: +91 9159669599</br>
+            Email: info@bluedart.in</br>
+            Web: www.bluedart.in</br>
+
+        </div>
+    </div>
+   
+</div>
+
+ <!-- Footer ending -->
+
+
+ <!-- copyright -->
+
+
+<div class="copyright">
+
     <div class="row">
         <p class="col-sm-8">2021 &copy; All Rights Reserved | Designed by NayaNayan</p>
         
@@ -88,8 +131,7 @@
 </div>
 
 
-
-  <!-- Footer ending -->
+  <!-- copyright ending -->
 </body>
 
 </html>
