--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="1.png" class="d-block w-100" alt="...">
+                <img src="2.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <!-- <h5>NayaNayan</h5>
                     <p>Some representative placeholder content for the second slide.</p> -->
@@ -72,25 +72,22 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
     </script>
 
+    <!-- why did we start starts -->
 
-
-
-    <!-- what we do starts -->
-
-    <div class="what-we-do">
+    <div class="why-start">
 
         <div class="title">
-            <h1>What we do</h1>
-            <p>We are a non-profital & Charity raising money for child education</p>
+            <h1>Why Did We Start?</h1>
+            <!-- <p>We are a non-profital & Charity raising money for child education</p> -->
         </div>
 
         <div class="row">
             <div class="col-md-4 col-sm-6">
                 <div class="event-box">
-                    <img src="events.jpg" alt="">
-                    <h4>Child Education in Africa</h4>
+                    <img src="why_start1.png" alt="">
+                    <!-- <h4>Child Education in Africa</h4>
                     <p class="raises"><span>Raised : $34,425</span> / $500,000 </p>
-                    <p class="desic">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's </p>
+                    <p class="desic">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's </p> -->
                     <button class="btn">Donate Now</button>
                 </div>
             </div>
@@ -99,10 +96,10 @@
 
             <div class="col-md-4 col-sm-6">
                 <div class="event-box">
-                    <img src="events.jpg" alt="">
-                    <h4>Child Education in Africa</h4>
+                    <img src="why_start2.png" alt="">
+                    <!-- <h4>Child Education in Africa</h4>
                     <p class="raises"><span>Raised : $34,425</span> / $500,000 </p>
-                    <p class="desic">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's </p>
+                    <p class="desic">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's </p> -->
                     <button class="btn">Donate Now</button>
                 </div>
             </div>
@@ -111,10 +108,10 @@
 
             <div class="col-md-4 col-sm-6">
                 <div class="event-box">
-                    <img src="events.jpg" alt="">
-                    <h4>Child Education in Africa</h4>
+                    <img src="why_start3.png" alt="">
+                    <!-- <h4>Child Education in Africa</h4>
                     <p class="raises"><span>Raised : $34,425</span> / $500,000 </p>
-                    <p class="desic">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's </p>
+                    <p class="desic">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's </p> -->
                     <button class="btn">Donate Now</button>
                 </div>
             </div>
@@ -124,7 +121,7 @@
 
     </div>
 
-    <!-- what we do ends -->
+    <!-- why did we start ending -->
 
 
 
@@ -199,7 +196,7 @@
                     <img src="fd.png" alt="Avatar" style="width:300px;height:300px;">
                 </div>
                 <div class="flip-card-back">
-                    <h1>FINANCE DEPARTMENT HEAD</h1>
+                    <h1>FINANCE DEPARTMENT </h1>
                     <p>QUALIFICATION: BTech(CS), BSc(IT)</p>
                 </div>
             </div>
@@ -210,7 +207,7 @@
                     <img src="gd.png" alt="Avatar" style="width:300px;height:300px;">
                 </div>
                 <div class="flip-card-back">
-                    <h1>GRAPHIC DESIGNING TEAM</h1>
+                    <h1>DESIGNING TEAM</h1>
                     <p>QUALIFICATION: BTech(CS), BSc(IT)</p>
                 </div>
             </div>
