--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@
                         <div class="row">
                             <div class="col-md-6 align-self-center">
                                 <div class="right-content">
-                                    <h1>About NayaNayan</h1><br><br>
+                                    <h1>About NayaNayan</h1><br>
                                     <p>NAYANAYAN IS AN ORGANISATION DESIGNED TO EDUCATE CITIZENS OF THE WORLD ABOUT SEX
                                         EDUCATION AND AWARENESS ON VARIOUS TYPES OF CANCERS. OFTEN, OUR EDUCATION SYSTEM
                                         FAILS TO EXPLAIN THESE TOPICS. THANKFULLY, OUR ORGANISATION PLANS TO EDUCATE
                                         EVERY BEING OUT THERE WITH THIS.
                                         AND HENCE, BRINGING A CHANGE IN THE CHAIN.</p>
                                 </div><br>
-                                <h6>WELCOME TO THE SCHOOL OF AWARENESS</h6>
+                                <h6>WELCOME TO THE SCHOOL OF AWARENESS</h6><br>
                             </div>
                             <div class="col-md-6">
                                 <div class="left-image">
