--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
 
 
     <nav class="navbar">
-        <img src="./imgs/Copy of LOGO OF NAYA NAYAN.svg" width="250px" height="150px" alt="">
         <div class="brand-name">
-            NayaNayan
+            <img src="./imgs/circle-cropped.png" width="100px" height="100px" alt=""> NayaNayan
         </div>
         <ul class="list-non-bullet">
             <li class="list-item-inline"> <a class=" link link-active" href="/">Home</a></li>
             <li class="list-item-inline"> <a class=" link" href="#about">About us</a></li>
             <li class="list-item-inline"> <a class=" link" href="/">Blogs</a></li>
-            <li class="list-item-inline"> <a class=" link" href="/">Contact us</a></li>
+            <li class="list-item-inline"> <a class=" link" href="/">Contact Us</a></li>
 
-            <form class="list-item-inline" action="https://docs.google.com/forms/d/e/1FAIpQLSdj-zuwa7jupBrHVjOaJwiqMCL12wdDeT_7d-w-D85L0dFBow/viewform"> <button class="primary-btn">Join Now</button></form>
+            <form target="_blank" class="list-item-inline" action="https://docs.google.com/forms/d/e/1FAIpQLSdj-zuwa7jupBrHVjOaJwiqMCL12wdDeT_7d-w-D85L0dFBow/viewform">
+                <button class="primary-btn">Join Now</button></form>
         </ul>
 
     </nav>
@@ -92,15 +92,16 @@
                         <div class="row">
                             <div class="col-md-6 align-self-center">
                                 <div class="right-content">
-                                    <h1>About NayaNayan</h1><br>
-                                    <p>NAYANAYAN IS AN ORGANISATION DESIGNED TO EDUCATE CITIZENS OF THE WORLD ABOUT SEX EDUCATION AND AWARENESS ON VARIOUS TYPES OF CANCERS. OFTEN, OUR EDUCATION SYSTEM FAILS TO EXPLAIN THESE TOPICS. THANKFULLY, OUR ORGANISATION
-                                        PLANS TO EDUCATE EVERY BEING OUT THERE WITH THIS. AND HENCE, BRINGING A CHANGE IN THE CHAIN.</p>
+                                    <h1>About Us</h1><br>
+                                    <p class="about-us-content">NayaNayan is an organization designed to educate citizens of the world about sex education and awareness on various types of cancers. often, our education system fails to explain these topics. thankfully, our organization
+                                        plans to educate every being out there with this. and hence, bringing a change in the chain.</p>
+                                    <h6 style="font-style: bold;">WELCOME TO THE SCHOOL OF AWARENESS</h6><br>
                                 </div><br>
-                                <h6>WELCOME TO THE SCHOOL OF AWARENESS</h6><br>
+
                             </div>
                             <div class="col-md-6">
                                 <div class="left-image">
-                                    <img src="./imgs/logo.png" alt="">
+                                    <!-- <img src="./imgs/logo.png" alt=""> -->
                                 </div>
                             </div>
                         </div>
@@ -228,7 +229,7 @@
 
     <div class="meet-team">
         <h1>Meet Our Team</h1>
-        <p>Take a look at our innovative and experiance team</p>
+        <p>Take a look at our innovative and passionate team</p>
 
 
 
@@ -424,25 +425,35 @@
     <!-- our team end -->
     <div class=" blog-container">
         <div class="container">
-            <h1>
-                Blogs
+            <h1 style="font-size: 2.5rem; font-weight: 650;">
+                BLOGS
             </h1>
             <div class="col-md-12">
-                <h1>Alice in Wonderland, part dos</h1>
-                <p>'You ought to be ashamed of yourself for asking such a simple question,' added the Gryphon; and then they both sat silent and looked at poor Alice, who felt ready to sink into the earth. At last the Gryphon said to the Mock Turtle, 'Drive
-                    on, old fellow! Don't be all day about it!' and he went on in these words: 'Yes, we went to school in the sea, though you mayn't believe it—' 'I never said I didn't!' interrupted Alice. 'You did,' said the Mock Turtle.</p>
+                <h2 style="text-align: center;">Alice in Wonderland, part dos</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas vitae scel<span id="dots">...</span><span id="more">erisque enim ligula
+                        venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus
+                        vestibulum augue ut aliquet. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In
+                        at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
+                        venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor
+                        porta.</span></p>
+
+                <button onclick="myFunction()" id="myBtn">Read more</button>
                 <div>
                     <span class="badge">Posted 2012-08-02 20:47:04</span>
                     <p class="writer">by Rishiba batra</p>
                 </div>
                 <hr>
-                <h1>Revolution has begun!</h1>
-                <p>'I am bound to Tahiti for more men.' 'Very good. Let me board you a moment—I come in peace.' With that he leaped from the canoe, swam to the boat; and climbing the gunwale, stood face to face with the captain. 'Cross your arms, sir; throw
-                    back your head. Now, repeat after me. As soon as Steelkilt leaves me, I swear to beach this boat on yonder island, and remain there six days. If I do not, may lightning strike me!'A pretty scholar,' laughed the Lakeman. 'Adios, Senor!'
-                    and leaping into the sea, he swam back to his comrades.</p>
+                <h2 style="text-align: center;">Alice in Wonderland, part dos</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas vitae scel<span id="dots">...</span><span id="more">erisque enim ligula
+                        venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus
+                        vestibulum augue ut aliquet. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In
+                        at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
+                        venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor
+                        porta.</span></p>
+
+                <button onclick="myFunction()" id="myBtn">Read more</button>
                 <div>
                     <span class="badge">Posted 2012-08-02 20:47:04</span>
-
                     <p class="writer">by Rishiba batra</p>
                 </div>
                 <hr>
@@ -451,7 +462,23 @@
     </div>
 
 
+    <script>
+        function myFunction() {
+            var dots = document.getElementById("dots");
+            var moreText = document.getElementById("more");
+            var btnText = document.getElementById("myBtn");
 
+            if (dots.style.display === "none") {
+                dots.style.display = "inline";
+                btnText.innerHTML = "Read more";
+                moreText.style.display = "none";
+            } else {
+                dots.style.display = "none";
+                btnText.innerHTML = "Read less";
+                moreText.style.display = "inline";
+            }
+        }
+    </script>
 
 
 
@@ -794,8 +821,8 @@
     <!-- Footer -->
 
 
-
-    <!-- <div class="footer">
+    <!-- 
+    <div class="footer">
         <div class="row">
 
             <div class=" about col-sm-4">
