--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link href="css/rotating-card.css" rel="stylesheet" />
     <link rel="icon" href="imgs/Copy of LOGO OF NAYA NAYAN.svg">
-</head>
 
+</head>
 <body>
+
     <!-- navbar starting -->
 
 
@@ -21,17 +22,17 @@
             <img src="./imgs/circle-cropped.png" width="100px" height="100px" alt=""> NayaNayan
         </div>
         <ul class="list-non-bullet">
-            <li class="list-item-inline"> <a class=" link link-active" href="/">Home</a></li>
+            <li class="list-item-inline"> <a class=" link link-active" href="index.html">Home</a></li>
             <li class="list-item-inline"> <a class=" link" href="#about">About us</a></li>
             <li class="list-item-inline"> <a class=" link" href="/">Blogs</a></li>
             <li class="list-item-inline"> <a class=" link" href="/">Contact Us</a></li>
 
-            <form target="_blank" class="list-item-inline" action="https://docs.google.com/forms/d/e/1FAIpQLSdj-zuwa7jupBrHVjOaJwiqMCL12wdDeT_7d-w-D85L0dFBow/viewform">
-                <button class="primary-btn">Join Now</button></form>
+            <!-- <form target="_blank" class="list-item-inline" action="https://docs.google.com/forms/d/e/1FAIpQLSdj-zuwa7jupBrHVjOaJwiqMCL12wdDeT_7d-w-D85L0dFBow/viewform"> -->
+               <a href="joinus.html"><button class="primary-btn" href="joinus.html">Join Now</button></a>
+            <!-- </form> -->
+
         </ul>
-
     </nav>
-
 
     <!-- navbar ending -->
 
@@ -51,14 +52,14 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="./imgs/2.png" class="d-block w-100" alt="...">
+                <img src="./imgs/two.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <!-- <h5>NayaNayan</h5>
                     <p>Some representative placeholder content for the second slide.</p> -->
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="./imgs/3.png" class="d-block w-100" alt="...">
+                <img src="./imgs/threee.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <!-- <h5>NayaNayan</h5>
                     <p>Some representative placeholder content for the third slide.</p> -->
@@ -93,7 +94,7 @@
                             <div class="col-md-6 align-self-center">
                                 <div class="right-content">
                                     <h1>About Us</h1><br>
-                                    <p class="about-us-content">NayaNayan is an organization designed to educate citizens of the world about sex education and awareness on various types of cancers. often, our education system fails to explain these topics. thankfully, our organization
+                                    <p class=about-us-content">NayaNayan is an organization designed to educate citizens of the world about sex education and awareness on various types of cancers. often, our education system fails to explain these topics. thankfully, our organization
                                         plans to educate every being out there with this. and hence, bringing a change in the chain.</p>
                                     <h6 style="font-style: bold;">WELCOME TO THE SCHOOL OF AWARENESS</h6><br>
                                 </div><br>
