donate now page

--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
         <ul class="list-non-bullet">
             <li class="list-item-inline"> <a class=" link link-active" href="index.html">Home</a></li>
             <li class="list-item-inline"> <a class=" link" href="#about">About us</a></li>
-            <li class="list-item-inline"> <a class=" link" href="/">Blogs</a></li>
-            <li class="list-item-inline"> <a class=" link" href="/">Contact Us</a></li>
+            <li class="list-item-inline"> <a class=" link" href="#blogs">Blogs</a></li>
+            <li class="list-item-inline"> <a class=" link" href="#contact">Contact Us</a></li>
+            <li class="list-item-inline"> <a class=" link" href="donate.html">Donate</a></li>
 
             <!-- <form target="_blank" class="list-item-inline" action="https://docs.google.com/forms/d/e/1FAIpQLSdj-zuwa7jupBrHVjOaJwiqMCL12wdDeT_7d-w-D85L0dFBow/viewform"> -->
-               <a href="joinus.html"><button class="primary-btn" href="joinus.html">Join Now</button></a>
+               <a href="joinus.html"><button class="primary-btn">Join Now</button></a>
             <!-- </form> -->
 
         </ul>
@@ -85,13 +86,12 @@
 
     <!-- about us starting -->
 
-    <div class="about-us">
+    <div class="about-us" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="about-info">
                         <div class="row">
-                            <div class="col-md-6 align-self-center">
                                 <div class="right-content">
                                     <h1>About Us</h1><br>
                                     <p class=about-us-content">NayaNayan is an organization designed to educate citizens of the world about sex education and awareness on various types of cancers. often, our education system fails to explain these topics. thankfully, our organization
@@ -99,12 +99,8 @@
                                     <h6 style="font-style: bold;">WELCOME TO THE SCHOOL OF AWARENESS</h6><br>
                                 </div><br>
 
-                            </div>
-                            <div class="col-md-6">
-                                <div class="left-image">
-                                    <!-- <img src="./imgs/logo.png" alt=""> -->
-                                </div>
-                            </div>
+                            
+                            
                         </div>
                     </div>
                 </div>
@@ -179,7 +175,7 @@
 
                     </div>
 
-                    <button class="btn">Donate Now</button>
+                    <button class="btn" onClick="window.location='donate.html'";>Donate Now</button>
 
                 </div>
             </div>
@@ -196,7 +192,7 @@
 
                     </div>
 
-                    <button class="btn">Donate Now</button>
+                    <button class="btn" onClick="window.location='donate.html'";>Donate Now</button>
 
                 </div>
             </div>
@@ -213,7 +209,7 @@
 
                     </div>
 
-                    <button class="btn">Donate Now</button>
+                    <button class="btn" onClick="window.location='donate.html'";>Donate Now</button>
 
                 </div>
             </div>
@@ -424,7 +420,7 @@
 
 
     <!-- our team end -->
-    <div class=" blog-container">
+    <div class=" blog-container" id="blogs">
         <div class="container">
             <h1 style="font-size: 2.5rem; font-weight: 650;">
                 BLOGS
@@ -702,7 +698,7 @@
 
 
 
-    <section class="contact-us">
+    <section class="contact-us" id="contact">
 
         <!--Section heading-->
         <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>
