--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
                         <div class="row">
                             <div class="right-content">
                                 <h1>About Us</h1><br>
-                                <p class=about-us-content ">NayaNayan is an organization designed to educate citizens of the world about sex education and awareness on various types of cancers. often, our education system fails to explain these topics. thankfully, our organization
-                                        plans to educate every being out there with this. and hence, bringing a change in the chain.</p>
-                                    <h6 style="font-style: bold; ">WELCOME TO THE SCHOOL OF AWARENESS</h6><br>
-                                </div><br>
+                                <p class="about-us-content ">NayaNayan is an organization designed to educate citizens of the world about sex education and awareness on various types of cancers. often, our education system fails to explain these topics. thankfully, our organization
+                                    plans to educate every being out there with this. and hence, bringing a change in the chain.</p>
+                                <h6 style="font-style: bold; ">WELCOME TO THE SCHOOL OF AWARENESS</h6><br>
+                            </div><br>
 
-                            
-                            
+
+
                         </div>
                     </div>
                 </div>
@@ -184,7 +184,7 @@
 
                     </div>
 
-                    <button class="btn " onClick="window.location='donate.html' ";>Donate Now</button>
+                    <button class="btn " onClick="window.location='donate.html' " ;>Donate Now</button>
 
                 </div>
             </div>
@@ -201,7 +201,7 @@
 
                     </div>
 
-                    <button class="btn " onClick="window.location='donate.html' ";>Donate Now</button>
+                    <button class="btn " onClick="window.location='donate.html' " ;>Donate Now</button>
 
                 </div>
             </div>
@@ -218,7 +218,7 @@
 
                     </div>
 
-                    <button class="btn " onClick="window.location='donate.html' ";>Donate Now</button>
+                    <button class="btn " onClick="window.location='donate.html' " ;>Donate Now</button>
 
                 </div>
             </div>
