--- a/donate.html
+++ b/donate.html
@@ -22,7 +22,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="brand-name navbar-brand">
-            <img src="./imgs/circle-cropped.png" width="100px" height="100px" alt=""> NayaNayan
+            <img src="./imgs/logo.svg" width="80px" height="80px" alt=""> NayaNayan
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -31,10 +31,10 @@
         <div class="collapse navbar-collapse nav-div " id="navbarSupportedContent">
             <ul class="list-non-bullet navbar-nav  ml-auto">
                 <li class="list-item-inline nav-item active"> <a class="nav-link link link-active" href="index.html">Home</a></li>
-                <li class="list-item-inline nav-item active"> <a class="nav-link link" href="#about">About us</a></li>
-                <li class="list-item-inline nav-item active"> <a class="nav-link link" href="#blogs">Blogs</a></li>
-                <li class="list-item-inline nav-item active"> <a class="nav-link link" href="#contact">Contact Us</a></li>
-                <li class="list-item-inline nav-item active"> <a class="nav-link link" href="donate.html">Donate</a></li>
+                <li class="list-item-inline nav-item active"> <a class="nav-link link" href="index.html#about">About us</a></li>
+                <li class="list-item-inline nav-item active"> <a class="nav-link link" href="index.html#blogs">Blogs</a></li>
+                <li class="list-item-inline nav-item active"> <a class="nav-link link" href="index.html#contact">Contact Us</a></li>
+                <li class="list-item-inline nav-item active"> <a class="nav-link link" href="donate.html">Donate Now</a></li>
 
                 <!-- <form target="_blank" class="list-item-inline" action="https://docs.google.com/forms/d/e/1FAIpQLSdj-zuwa7jupBrHVjOaJwiqMCL12wdDeT_7d-w-D85L0dFBow/viewform"> -->
                 <a href="joinus.html"><button class="primary-btn">Join Now</button></a>
@@ -63,14 +63,14 @@
 
         <div class="content p-4">
             <div class="title text-center">
-                <h1>Together, we can make this possible</h1><br>
+                <h1>Your small step can lead to a big change!</h1><br>
             </div>
             <h5 style="text-align: center;"><i>Naya Nayan is one of the rarest organisations where you get a chance to eradicate the rape and victimization culture from the root cause.</i>
             </h5>
 
 
-            <p class="text-center"> So if you're passionate in changing the chain and meeting the like-minded people with whom you can grow and can be an inspiration in someone's life. Then you have come to a right place. Volunteering with us will not only help you to grow personally
-                but also give you the satisfaction of seeing thousands of lives being impacted because of your good deeds. So, what are you waiting for? Take the first step and become a part of our chain, let’s change the chain together!
+            <p class="text-center"> We all have some purpose to serve in this world but the common purpose we have is to leave a secure, better and happy world behind and your small amount can help us achieve that. So go ahead and take the first step and help us in changing
+                the chain!
                 <p>
 
         </div>
