--- a/joinus.html
+++ b/joinus.html
@@ -20,7 +20,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="brand-name navbar-brand">
-            <img src="./imgs/circle-cropped.png" width="100px" height="100px" alt=""> NayaNayan
+            <img src="./imgs/logo.svg" width="80px" height="80px" alt=""> NayaNayan
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -32,7 +32,7 @@
                 <li class="list-item-inline nav-item active"> <a class="nav-link link" href="#about">About us</a></li>
                 <li class="list-item-inline nav-item active"> <a class="nav-link link" href="#blogs">Blogs</a></li>
                 <li class="list-item-inline nav-item active"> <a class="nav-link link" href="#contact">Contact Us</a></li>
-                <li class="list-item-inline nav-item active"> <a class="nav-link link" href="donate.html">Donate</a></li>
+                <li class="list-item-inline nav-item active"> <a class="nav-link link" href="donate.html">Donate Now</a></li>
 
                 <!-- <form target="_blank" class="list-item-inline" action="https://docs.google.com/forms/d/e/1FAIpQLSdj-zuwa7jupBrHVjOaJwiqMCL12wdDeT_7d-w-D85L0dFBow/viewform"> -->
                 <a href="joinus.html"><button class="primary-btn">Join Now</button></a>
