--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link href="css/rotating-card.css" rel="stylesheet" />
-    <link rel="icon" href="imgs/Copy of LOGO OF NAYA NAYAN.svg">
+    <link rel="icon" href="imgs/logo.svg">
 
 </head>
 
@@ -20,7 +20,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="brand-name navbar-brand">
-            <img src="./imgs/circle-cropped.png" width="100px" height="100px" alt=""> NayaNayan
+            <img src="./imgs/logo.svg" width="80px" height="80px" alt=""> NayaNayan
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -28,11 +28,11 @@
 
         <div class="collapse navbar-collapse nav-div " id="navbarSupportedContent">
             <ul class="list-non-bullet navbar-nav  ml-auto">
-                <li class="list-item-inline nav-item active"> <a class="nav-link link link-active" href="index.html">Home</a></li>
+                <li class="list-item-inline nav-item active"> <a class="nav-link link link-active " href="index.html">Home</a></li>
                 <li class="list-item-inline nav-item active"> <a class="nav-link link" href="#about">About us</a></li>
                 <li class="list-item-inline nav-item active"> <a class="nav-link link" href="#blogs">Blogs</a></li>
                 <li class="list-item-inline nav-item active"> <a class="nav-link link" href="#contact">Contact Us</a></li>
-                <li class="list-item-inline nav-item active"> <a class="nav-link link" href="donate.html">Donate</a></li>
+                <li class="list-item-inline nav-item active"> <a class="nav-link link" href="donate.html">Donate Now</a></li>
 
                 <!-- <form target="_blank" class="list-item-inline" action="https://docs.google.com/forms/d/e/1FAIpQLSdj-zuwa7jupBrHVjOaJwiqMCL12wdDeT_7d-w-D85L0dFBow/viewform"> -->
                 <a href="joinus.html"><button class="primary-btn">Join Now</button></a>
@@ -103,9 +103,10 @@
                         <div class="row">
                             <div class="right-content">
                                 <h1>About Us</h1><br>
-                                <p class="about-us-content ">NayaNayan is an organization designed to educate citizens of the world about sex education and awareness on various types of cancers. often, our education system fails to explain these topics. thankfully, our organization
-                                    plans to educate every being out there with this. and hence, bringing a change in the chain.</p>
-                                <h6 style="font-style: bold; ">WELCOME TO THE SCHOOL OF AWARENESS</h6><br>
+                                <p class="about-us-content ">NayaNayan is an organization determined towards bringing the change by promoting the right sex education, fighting the rape culture, spreading the awareness on various type of cancers and escalating the importance of mental
+                                    health.
+                                </p>
+                                <h5 class="text-center" style="font-style: italic; ">As often our education system fails to do so.</h5><br>
                             </div><br>
 
 
