--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                             <div class="right-content">
                                 <h1>About Us</h1><br>
                                 <p class="about-us-content ">NayaNayan is an organization determined towards bringing the change by promoting the right sex education, fighting the rape culture, spreading the awareness on various type of cancers and escalating the importance of mental
-                                    health.
+                                    health.<br><br>
                                 </p>
                                 <h5 class="text-center" style="text-transform: uppercase; ">As often our education system fails to do so.</h5><br>
                             </div><br>
