mobile Number updated

--- a/donate.html
+++ b/donate.html
@@ -102,7 +102,7 @@
                 }
 
                 function bankd() {
-                    document.getElementById("demo1").innerHTML = "Account Number : 4865138965489<br>IFSC code : SUN0000B<br>"
+                    document.getElementById("demo1").innerHTML = "Account Number : 48651XXXXX<br>IFSC code : XXXXXXXXX<br>"
                     document.getElementById("bankbtn").style.backgroundColor = "black"
                     document.getElementById("bankbtn").style.color = "white"
                     document.getElementById("paytmbtn").style.backgroundColor = "white"
@@ -112,7 +112,7 @@
                 }
             </script>
             <p id="demo1" class="demo1">
-                Paytm Number : +91972400000
+                Paytm Number : 9638471138
             </p>
 
         </div>
