--- a/index.html
+++ b/index.html
@@ -794,12 +794,12 @@
                     </li>
 
                     <li><i class="fa fa-phone " aria-hidden="true "></i>
-                        <p>+587375757657</p>
+                        <p>9058212444</p>
                     </li>
 
                     <li><i class="fa fa-envelope " aria-hidden="true "></i>
 
-                        <p>nayanayan@gmail.com</p>
+                        <p>thenayanayan@gmail.com</p>
                     </li>
                 </ul>
             </div>
@@ -920,7 +920,9 @@
             var moreText2 = document.getElementById("more2");
             var btnText2 = document.getElementById("myBtn2");
 
+
             if (dots2.style.display === "none") {
+                moreText2.style.display = "none";
                 dots2.style.display = "inline";
                 btnText2.innerHTML = "Read more";
                 moreText2.style.display = "none";
