--- a/donate.html
+++ b/donate.html
@@ -11,15 +11,11 @@
     <link href="css/rotating-card.css" rel="stylesheet" />
     <link rel="icon" href="imgs/Copy of LOGO OF NAYA NAYAN.svg">
 
-
 </head>
 
 <body>
 
     <!-- navbar starting -->
-
-
-
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="brand-name navbar-brand">
             <img src="./imgs/logo.svg" width="80px" height="80px" alt=""> NayaNayan
@@ -91,7 +87,7 @@
 
             <script>
                 function paytm() {
-                    document.getElementById("demo1").innerHTML = "Paytm Number : +91972400000"
+                    document.getElementById("demo1").innerHTML = "Paytm Number : 9058212444"
 
                     document.getElementById("paytmbtn").style.backgroundColor = "black"
                     document.getElementById("paytmbtn").style.color = "white"
@@ -112,7 +108,7 @@
                 }
             </script>
             <p id="demo1" class="demo1">
-                Paytm Number : 9638471138
+                Paytm Number : 9058212444
             </p>
 
         </div>
