--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
         </div>
     </div> -->
 
-<div class="blogs">
+<div class="blogs" id="blogs">
 
     <h1> Blogs </h1>
     <div class="blog" data-blog="blog1">
