readmore working fine

--- a/index.html
+++ b/index.html
@@ -441,6 +441,9 @@
 
 
 
+
+
+
     <!-- blogs ending -->
 
 
@@ -912,8 +915,9 @@
                 moreText.style.display = "inline";
             }
         }
+    </script>
 
-
+    <script>
         function myFunction2() {
 
 
@@ -933,8 +937,9 @@
                 moreText2.style.display = "inline";
             }
         }
+    </script>
 
-
+    <script>
         function myFunction3() {
 
 
