--- a/index.html
+++ b/index.html
@@ -884,7 +884,7 @@
                     <!--Grid row-->
                     <div data-netlify-recaptcha="true"></div>
                     <div class="text-center text-md-left send-btn ">
-                        <a class="btn btn-primary " onclick="document.getElementById( 'contact-form').submit(); " style="background-color: black;" type="submit">Send</a>
+                        <Input class="btn btn-primary " style="background-color: black;" type="submit" value="Send"></Input>
                     </div>
 
                 </form>
